# wagtail-website

./: Readme.md
website/: Dockerfile  pyproject.toml
website/base/: models.py
website/base/migrations/: 0001_initial.py  0002_remove_navigationsettings_mastodon_url_and_more.py
website/blog/: models.py
website/blog/migrations/: 0001_initial.py  0002_blogpagegalleryimage.py  0003_delete_blogpagegalleryimage.py  0004_remove_blogindexpage_intro_blogpagetag_blogpage_tags.py  0005_blogtagindexpage.py
website/blog/static/css/: blog_index_page.css  blog_page.css  blog_tag_index_page.css
website/blog/templates/blog/: blog_index_page.html  blog_page.html  blog_tag_index_page.html
website/home/: models.py
website/home/migrations/: 0003_homepage_body.py  0004_aboutpage_remove_homepage_body.py  0005_rename_aboutpage_cvpage.py
website/home/static/css/: cv_page.css  home_page.css
website/home/templates/home/: cv_page.html  home_page.html
website/website/: urls.py
website/website/settings/: base.py  dev.py
website/website/static/css/: footer.css  header.css
website/website/templates/: base.html
website/website/templates/includes/: footer.html  header.html
